After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 661257 - giomodules.c uses ":" instead of G_SEARCHPATH_SEPARATOR_S
giomodules.c uses ":" instead of G_SEARCHPATH_SEPARATOR_S
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.30.x
Other Windows
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-10-08 11:13 UTC by Kean Johnston
Modified: 2011-10-15 21:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use G_SEARCHPATH_SEPARATOR_S rather than hard-coded string (370 bytes, patch)
2011-10-08 11:13 UTC, Kean Johnston
accepted-commit_now Details | Review
GIOModule: Use G_SEARCHPATH_SEPARATOR_S instead of ":" (740 bytes, patch)
2011-10-15 21:59 UTC, Matthias Clasen
committed Details | Review

Description Kean Johnston 2011-10-08 11:13:30 UTC
Created attachment 198594 [details] [review]
Use G_SEARCHPATH_SEPARATOR_S rather than hard-coded string

As the title says, giomodules uses a hard-coded string instead of G_SEARCHPATH_SEPARATOR_S for the path separator when looking at the environment variable GIO_EXTRA_MODULES. Small patch attached. Patch against 2.30.x but applies to previous versions too.
Comment 1 Matthias Clasen 2011-10-11 11:09:20 UTC
Review of attachment 198594 [details] [review]:

Looks fine to me
Comment 2 Matthias Clasen 2011-10-15 21:59:00 UTC
The following fix has been pushed:
33a86fc GIOModule: Use G_SEARCHPATH_SEPARATOR_S instead of ":"
Comment 3 Matthias Clasen 2011-10-15 21:59:02 UTC
Created attachment 199080 [details] [review]
GIOModule: Use G_SEARCHPATH_SEPARATOR_S instead of ":"