GIOModule: Use G_SEARCHPATH_SEPARATOR_S instead of ":"

https://bugzilla.gnome.org/show_bug.cgi?id=661257